crates/uitest/fixtures/parser/move_expr_removed.snap
---
source: crates/uitest/tests/parser.rs
assertion_line: 26
expression: diags
input_file: fixtures/parser/move_expr_removed.fe
---
error[1-0001]: expected expression
  ┌─ move_expr_removed.fe:3:18
  │
3 │     let y: u256 = move x
  │                  ^ expected expression

error[1-0001]: unexpected syntax while parsing `let` statement
  ┌─ move_expr_removed.fe:3:19
  │
3 │     let y: u256 = move x
  │                   ^^^^^^ unexpected
